gateways/crobasaurusrex-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: crobasaurusrex-gateway
  namespace: gateways
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
spec:
  gatewayClassName: envoy-gateway
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy-config-crobasaurusrex
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.crobasaurusrex.ryanbeales.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: crobasaurusrex-ryanbeales-com-tls
            kind: Secret
